--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
         </div>
         <div class="brief-me">
           <p>
-            The experimental technical writing guy who resides in a terminal. I not
-            only write, but also code daily. Learn more
+            I am an experimental technical writer who resides in a terminal. I not
+            only write, but also code and hack things. <br>Learn more
             <a href="#">about me</a>.
           </p>
         </div>
       </div>
     </main>
     <footer class="margin-sides"></footer>
-    <script src="function.js"></script>
+    <script src="tabprofiles.js"></script>
     <script src="menu.js"></script>
   </body>
 </html>
