Alternating between buttons

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <div class="margin-sides header-holder">
         <div class="icon-frame"></div>
         <div class="mini-menu">
-          <button class="but1">GitHub</button>
-          <button class="but2">LinkedIn</button>
-          <button class="but3">Resume</button>
+          <button id="but1" class="but1">GitHub</button>
+          <button id="but2" class="but2">LinkedIn</button>
+          <button id="but3" class="but3">Resume</button>
         </div>
         <div id="menu-item" class="icon-frame menu-item">
           <div class="bars bar-tilt"></div>
