Logo and fav icon

--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/logo.ico"
+    />
   </head>
   <body>
     <header>
       <div class="margin-sides header-holder">
-        <div class="icon-frame"></div>
+        <div class="icon-frame">
+          <img class="logo" src="./images/logo.png" alt="logo" />
+        </div>
         <div class="mini-menu">
-          <button id="but1" class="but1">GitHub</button>
           <button id="but2" class="but2">LinkedIn</button>
           <button id="but3" class="but3">Resume</button>
+          <button id="but1" class="but1">GitHub</button>
         </div>
         <div id="menu-item" class="icon-frame menu-item">
           <div class="bars bar-tilt"></div>
@@ -51,12 +58,13 @@
         </div>
         <div class="brief-me">
           <p>
-            I am an experimental technical writer who resides in a terminal. I not
-            only write, but also code and hack things. <br>Learn more
+            I am an experimental technical writer who resides in a terminal. I
+            not only write, but also code and hack things. <br />Learn more
             <a href="#">about me</a>.
           </p>
         </div>
       </div>
+      <div class="resources-links"></div>
     </main>
     <footer class="margin-sides"></footer>
     <script src="tabprofiles.js"></script>
