Added the about section

--- a/index.html
+++ b/index.html
@@ -67,26 +67,28 @@
             <a href="#">about me</a>.
           </p>
         </div>
+        <div class="resource-tracker"></div>
         <div class="tab-div">
           <div>
-            <a href="https://www.linkedin.com/in/manuel-smith">Let's Connect</a>
+            <a href="https://www.linkedin.com/in/manuel-smith" target="_blank"
+              >Let's Connect</a
+            >
             <img
               src="./images/linkedin-profile.png"
               alt="linkedin profile image"
             />
-            <div class="overlay"></div>
           </div>
           <div class="active">
             <a href="./resources/Manuels-resume.pdf" download id="resumeBtn"
               >Collect My Resume</a
             >
             <img src="./images/my-resume.png" alt="Manuel's resume" />
-            <div class="overlay"></div>
           </div>
           <div>
-            <a href="https://github.com/Manuel-Smith">Follow Me</a>
+            <a href="https://github.com/Manuel-Smith" target="_blank"
+              >Follow Me</a
+            >
             <img src="./images/code-spaces.png" alt="github profile" />
-            <div class="overlay"></div>
           </div>
         </div>
       </div>
