--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="./images/logo.ico" />
+    <link rel="icon" type="image/png" href="./images/logo.png" />
   </head>
   <body>
     <header>
@@ -64,7 +64,7 @@
           <p>
             I am an experimental technical writer who resides in a terminal. I
             not only write, but also code and hack things. <br />Learn more
-            <a href="#">about me</a>.
+            <a href="./about.html">about me</a>.
           </p>
         </div>
         <div class="resource-tracker"></div>
@@ -86,7 +86,7 @@
           </div>
           <div>
             <a href="https://github.com/Manuel-Smith" target="_blank"
-              >Follow Me</a
+              >Check My Code</a
             >
             <img src="./images/code-spaces.png" alt="github profile" />
           </div>
