--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manuel Smith</title>
+    <title>About Manuel</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="utilities.css" />
     <link
@@ -17,7 +17,7 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="./images/logo.ico" />
+    <link rel="icon" type="image/png" href="./images/logo.png" />
   </head>
   <body>
     <header>
