changed ui and resume

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </div>
           <div>
             <a href="https://github.com/Manuel-Smith" target="_blank"
-              >Check My Code</a
+              >Review My Code</a
             >
             <img src="./images/code-spaces.png" alt="github profile" />
           </div>
