Changed the summary about me

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="brief-me">
           <p>
-            I am an experimental technical writer who resides in a terminal. I
+            I am an experimental technical writer who plays a lot in the terminal. I
             not only write, but also code and hack things. <br />Learn more
             <a href="./about.html">about me</a>.
           </p>
