--- a/index.html
+++ b/index.html
@@ -92,7 +92,84 @@
           </div>
         </div>
       </div>
-      <div class="resources-links"></div>
+      <div class="resources-links">
+        <div class="resources">
+          <div class="resource-image">
+            <img src="./resources/resource-images/1.png" alt="">
+          </div>
+          <div class="resource-copy">
+            <h1>System Configurations</h1>
+            <p>HAproxy is an open-source load balancer and proxy server software. It distributes inbound web traffic across multiple backend servers to ensure high availability, scalability, and reliability of web applications <br><br>This article demonstrates my technical ability to work with reverse proxies and how one may configure HAproxy in a Linux environment.</p>
+            <h2>Skilled Demonstrated</h2>
+            <ul>
+              <li>Command line Mastery</li>
+              <li>Layer 4 and 7 load balancing</li>
+              <li>Linux</li>
+              <li>Networking</li>
+              <li>UX writing</li>
+              <li>Web security and Access control</li>
+            </ul>
+            <button href="#">Read more</button>          
+          </div>
+        </div>
+        <div class="resources">
+          <div class="resource-image">
+            <img src="./resources/resource-images/3.png" alt="">
+          </div>
+          <div class="resource-copy">
+            <h1>Software Documentation</h1>
+            <p>Manterminal is a tool that emulates a command line utility. Instead of entering commands in a terminal, a user enters them in the command.txt file. This utility is a personal project I'm currently building in Node.js while documenting its progress. <br><br>In these articles, I demonstrate my ability to document software source code and APIs, write software in Node.js, and work with version control toolkits like git and GitHub.</p>
+            <h2>Skilled Demonstrated</h2>
+            <ul>
+              <li>Source code documentation</li>
+              <li>API documentation</li>
+              <li>Node.js</li>
+              <li>Git & GitHub</li>
+              <li>UX writing</li>
+              <li>Research</li>
+            </ul>
+            <button href="#">Read more</button>          
+          </div>
+        </div>
+        <div class="resources">
+          <div class="resource-image">
+            <img src="./resources/resource-images/2.png" alt="">
+          </div>
+          <div class="resource-copy">
+            <h1>Installation Guide</h1>
+            <p>Smoothwall is an open-source Linux-based firewall software desgined to protect networks from unauthorized access and malicious payloads. In this article, we install Smoothwall in Oracle's VirtualBox and also configure its networking so it has access to the internet. <br><br>This article demonstrates my technical ability to work in a hypervisor and the ability to craft concise installation guides on bare-metal, virtual machines, and cloud platforms.</p>
+            <h2>Skilled Demonstrated</h2>
+            <ul>
+              <li>Virtualization</li>
+              <li>Network configurations</li>
+              <li>UX writing</li>
+              <li>Networking</li>
+              <li>Research</li>
+              <li>Content planning</li>
+            </ul>
+            <button href="#">Read more</button>          
+          </div>
+        </div>
+        <div class="resources">
+          <div class="resource-image">
+            <img src="./resources/resource-images/4.png" alt="">
+          </div>
+          <div class="resource-copy">
+            <h1>Planning and Diagramming</h1>
+            <p>HAproxy is an open-source load balancer and proxy server software. It distributes inbound web traffic across multiple backend servers to ensure high availability, scalability, and reliability of web applications <br><br>This article demonstrates my technical ability to work with reverse proxies and how one may configure HAproxy in a Linux environment.</p>
+            <h2>Skilled Demonstrated</h2>
+            <ul>
+              <li>Command line Mastery</li>
+              <li>Layer 4 and 7 load balancing</li>
+              <li>Linux</li>
+              <li>Networking</li>
+              <li>UX writing</li>
+              <li>Web security and Access control</li>
+            </ul>
+            <button href="#">Read more</button>          
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="margin-sides"></footer>
     <script src="tabprofiles.js"></script>
