--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="resources-links">
-        <div class="portfolio-section"><h1>Samples</h1></div> 
+        <div class="portfolio-section"><h1>Projects</h1></div> 
         <div class="resources">
           <div class="resource-image">
             <img src="./resources/resource-images/1.png" alt="">
@@ -219,8 +219,14 @@
           </div>
         </div>
       </div>
+      <footer>
+        <h1>Manuel Smith</h1>
+        <p>Technical Writer and Node.Js Developer:  <span><a href="mailto:manuel@cranelux.com">manuel@cranelux.com</a></span></p>
+        <p><a href="#">Terms</a> | <a href="#">Privacy</a></p>
+        <p><a href="https://www.linkedin.com/in/manuel-smith/" target="_blank">Linkedin</a> | <a href="https://github.com/Manuel-Smith" target="_blank">GitHub</a> | <a href="https://www.codewars.com/users/Manuel-smith" target="_blank">CodeWars</a></p>
+      </footer>
     </main>
-    <footer class="margin-sides"></footer>
+
     <script src="tabprofiles.js"></script>
     <script src="menu.js"></script>
   </body>
