Added the installation article

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 check_box
                 </span>Web security and Access control</li>
             </ul>
-            <button href="#">Read more</button>          
+            <a href="#">Read more</a>          
           </div>
         </div>
         <div class="resources">
@@ -153,7 +153,7 @@
                 check_box
                 </span>Research</li>
             </ul>
-            <button href="#">Read more</button>          
+            <a href="#">Read more</a>          
           </div>
         </div>
         <div class="resources">
@@ -184,7 +184,7 @@
                 check_box
                 </span>Content planning</li>
             </ul>
-            <button href="#">Read more</button>          
+            <a href="./docs/installation.html">Read more</a>          
           </div>
         </div>
         <div class="resources">
@@ -215,7 +215,7 @@
                 check_box
                 </span>Web security and Access control</li>
             </ul>
-            <button href="#">Read more</button>          
+            <a href="#">Read more</a>          
           </div>
         </div>
       </div>
