description for diagramming and visualization

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           </div>
           <div class="resource-copy">
             <h1>System Configurations</h1>
-            <p>HAproxy is an open-source load balancer and proxy server software. It distributes inbound web traffic across multiple backend servers to ensure high availability, scalability, and reliability of web applications <br><br>This article demonstrates my technical ability to work with reverse proxies and how one may configure HAproxy in a Linux environment.</p>
+            <p>As an open-source load balancer and proxy server software, HAproxy distributes inbound web traffic across multiple backend servers in a server farm, improving reliability, scalability, and high availability of web applications. <br><br>This article demonstrates my ability to work with reverse proxies and how one may configure HAproxy in a Linux environment.</p>
             <h2>Skilled Demonstrated</h2>
             <ul>
               <li><span class="material-symbols-outlined">
@@ -122,7 +122,7 @@
                 check_box
                 </span>Web security and Access control</li>
             </ul>
-            <a href="#">Read more</a>          
+            <a href="#">Read Article</a>          
           </div>
         </div>
         <div class="resources">
@@ -131,7 +131,7 @@
           </div>
           <div class="resource-copy">
             <h1>Software Documentation</h1>
-            <p>Manterminal is a tool that emulates a command line utility. Instead of entering commands in a terminal, a user enters them in the command.txt file. This utility is a personal project I'm currently building in Node.js while documenting its progress. <br><br>In these articles, I demonstrate my ability to document software source code and APIs, write software in Node.js, and work with version control toolkits like git and GitHub.</p>
+            <p>Manterminal is a personal project that emulates command line utilities. Instead of entering commands in a shell or terminal, a user enters them in the commands.txt file. This utility is still in development, but documenting its progress is worthwhile. <br><br>Here, I demonstrate my ability to document software source code and APIs, write software programs in Node.js, and work with version control tools like Git and GitHub.</p>
             <h2>Skilled Demonstrated</h2>
             <ul>
               <li><span class="material-symbols-outlined">
@@ -142,7 +142,7 @@
                 </span>API documentation</li>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Node.js</li>
+                </span>Programming in Node.js</li>
               <li><span class="material-symbols-outlined">
                 check_box
                 </span>Git & GitHub</li>
@@ -153,7 +153,7 @@
                 check_box
                 </span>Research</li>
             </ul>
-            <a href="#">Read more</a>          
+            <a href="#">Read Article</a>          
           </div>
         </div>
         <div class="resources">
@@ -162,7 +162,7 @@
           </div>
           <div class="resource-copy">
             <h1>Installation Guide</h1>
-            <p>Smoothwall is an open-source Linux-based firewall software desgined to protect networks from unauthorized access and malicious payloads. In this article, we install Smoothwall in Oracle's VirtualBox and also configure its networking so it has access to the internet. <br><br>This article demonstrates my technical ability to work in a hypervisor and the ability to craft concise installation guides on bare-metal, virtual machines, and cloud platforms.</p>
+            <p>Smoothwall is an open-source Linux-based firewall software that protects networks from unauthorized access and malicious payloads. This article demonstrates how to install Smoothwall in Oracle's VirtualBox and also configure its networking so it has access to the internet. <br><br>Here, I demonstrate my prowess in working with hypervisor software and the ability to craft concise installation guides on bare-metal, virtual machines, and cloud platforms.</p>
             <h2>Skilled Demonstrated</h2>
             <ul>
               <li><span class="material-symbols-outlined">
@@ -170,7 +170,7 @@
                 </span>Virtualization</li>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Network configurations</li>
+                </span>Configuring Networks</li>
               <li><span class="material-symbols-outlined">
                 check_box
                 </span>UX writing</li>
@@ -184,7 +184,7 @@
                 check_box
                 </span>Content planning</li>
             </ul>
-            <a href="./docs/installation.html">Read more</a>          
+            <a href="./docs/installation.html">Read Article</a>          
           </div>
         </div>
         <div class="resources">
@@ -192,30 +192,30 @@
             <img src="./resources/resource-images/4.png" alt="">
           </div>
           <div class="resource-copy">
-            <h1>Planning and Diagramming</h1>
-            <p>HAproxy is an open-source load balancer and proxy server software. It distributes inbound web traffic across multiple backend servers to ensure high availability, scalability, and reliability of web applications <br><br>This article demonstrates my technical ability to work with reverse proxies and how one may configure HAproxy in a Linux environment.</p>
+            <h1>Diagramming & Visualization</h1>
+            <p>Graphical illustrations are essential when representing complex data flows, network traffic, and the topology of network infrastructure. Diagrams visualize complex ideas and concepts, leading to better decision-making. <br><br>Here, I demonstrate my ability to design classical UML models using diagramming tools and simulating packet transmission between network nodes using the Cisco Packet tracer.</p>
             <h2>Skilled Demonstrated</h2>
             <ul>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Command line Mastery</li>
+                </span>UML Diagramming</li>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Layer 4 and 7 load balancing</li>
+                </span>Architecture Visualization</li>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Linux</li>
+                </span>Network Simulations</li>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Networking</li>
+                </span>Graphical illustration</li>
               <li><span class="material-symbols-outlined">
                 check_box
                 </span>UX writing</li>
               <li><span class="material-symbols-outlined">
                 check_box
-                </span>Web security and Access control</li>
+                </span>Research</li>
             </ul>
-            <a href="#">Read more</a>          
+            <a href="#">Read Article</a>          
           </div>
         </div>
       </div>
