Added the installation guide

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 check_box
                 </span>Web security and Access control</li>
             </ul>
-            <a href="#">Read Article</a>          
+            <a href="./docs/haproxy-configurations.html">Read Article</a>          
           </div>
         </div>
         <div class="resources">
